--- a/wiki/AreaAssignments.wiki
+++ b/wiki/AreaAssignments.wiki
@@ -20,6 +20,8 @@ Since there are 2 of us, we can pick and choose our individual areas to work on.
 
 *Database* - <strike>this is going to start off fairly simple. I plan on using OpenOffice Calc as the data store and MySql data connection to read data.</strike> Data will be conveniently stored in .CSV format during early stages of development. We need to be able to tweak values, test numerical algorithms and value ranges. Once we have algorithms working correctly and not variable values set, we can serialize into XML during later stages.
 
+1/22/2011: see http://www.codeproject.com/KB/database/CsvReader.aspx
+
 *Player objects & classes* - Designing the player areas on the game board and the player classes.
 
 *Images* - to be determined.
