Edited wiki page DataLoading through web user interface.

--- a/wiki/DataLoading.wiki
+++ b/wiki/DataLoading.wiki
@@ -3,4 +3,8 @@ DataLoading is performed through a library authored by Sebastien Lorien. The sou
 
 This is going to be for early stage development of numerical algorithms and determining mechanical balance, numerical limits, and random range generation.  
 
-CsvReader appears to be a very useful and lightweight solution to reading .csv file data.
+CsvReader appears to be a very useful and lightweight solution to reading .csv file data.  
+
+CsvReader is licensed under the MIT license. I am currently working with the author to ensure we meet the MIT license requirements. Stratagem does not include any source code from the CsvReader project. The .dll is copied to the SVN trunk and referenced in GameLib_01. 
+
+CsvReader will play a large role in early- to mid-stage development. LumenWorks IO Framework provides some very useful methods to transform your csv data into a `string[]` or even a `DataTable`. 
